--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -81,6 +81,10 @@ span.shd_new_tickets {
     padding: 1px 5px 3px 4px;
 }
 
+.shd_smallicon {
+	max-width: initial;
+}
+
 /* The page index color looks ugly with our theme. */
 .shd_cat_bar .current_page, .shd_pages .current_page {
 	color: #fff;
