Fixes profile menu links
Fixes #139

--- a/css/helpdesk_icons.css
+++ b/css/helpdesk_icons.css
@@ -56,7 +56,7 @@
 }
 
 /* Main Menu */
-#main_menu .main_icons.helpdesk::before {
+#main_menu .main_icons.helpdesk::before, .profile_user_links .main_icons.hd_profile::before{
 	background: url(../images/simpledesk/icons/shd_generic_icons.png) no-repeat;
 	background-position: -65px -116px;
 }
