--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -551,3 +551,29 @@ dl.stats dd span, dl.stats dt span {
 .shd_75 {
 	width: 75%;
 }
+
+/* Unread */
+.sd_unread_title,
+.sd_unread_content {
+	display: flex;
+	min-height: 35px;
+	flex-wrap: wrap;
+	align-items: center;
+	padding: 0 4px;
+}
+.sd_unread_title span {
+	flex-basis: auto;
+	flex-grow: 1;
+}
+.sd_unread_content span {
+	flex-basis: auto;
+	flex-shrink: 0;
+	flex-grow: 1;
+}
+
+@media screen and (max-width: 991px) {
+	.sd_unread_title span:not(:nth-child(1), :nth-child(2), :nth-child(5)),
+	.sd_unread_content span:not(:nth-child(1), :nth-child(2), :nth-child(5)) {
+		display: none;
+	}
+}
