--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -553,19 +553,26 @@ dl.stats dd span, dl.stats dt span {
 }
 
 /* Unread */
-.sd_unread_title,
-.sd_unread_content {
+.sd_unread_title {
 	display: flex;
 	min-height: 35px;
 	flex-wrap: wrap;
 	align-items: center;
 	padding: 0 4px;
 }
+.sd_unread_content div.sd_unread_row {
+	display: flex;
+	min-height: 35px;
+	flex-wrap: wrap;
+	align-items: center;
+	padding: 0 4px;
+}
+
 .sd_unread_title span {
 	flex-basis: auto;
 	flex-grow: 1;
 }
-.sd_unread_content span {
+.sd_unread_content div.sd_unread_row span {
 	flex-basis: auto;
 	flex-shrink: 0;
 	flex-grow: 1;
@@ -573,7 +580,7 @@ dl.stats dd span, dl.stats dt span {
 
 @media screen and (max-width: 991px) {
 	.sd_unread_title span:not(:nth-child(1), :nth-child(2), :nth-child(5)),
-	.sd_unread_content span:not(:nth-child(1), :nth-child(2), :nth-child(5)) {
+	.sd_unread_content div.sd_unread_row span:not(:nth-child(1), :nth-child(2), :nth-child(5)) {
 		display: none;
 	}
 }
